Update ACO algorithm and documentation with 24h simulation results